feat(FinancialCategory): update and change type attribute to IntegerField

--- a/financials/templates/financial_category/list.html
+++ b/financials/templates/financial_category/list.html
@@ -64,7 +64,7 @@
                         </button>
                         <ul class="dropdown-menu">
                             <li>
-                                <a class="dropdown-item" href="#">
+                                <a class="dropdown-item" href="{% url 'financial_category_update' category.id %}">
                                     Editar
                                 </a>
                             </li>
