--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -21,18 +21,13 @@
                         Clientes e Fornecedores
                     </a>
                 </div>
-                <div id="collapse-customers" class="accordion-collapse collapse" data-bs-parent="#accordionSidebar">
+                <div id="collapse-customers" class="accordion-collapse collapse {% if 'customer-supplier' in request.path|urlencode %}show{% endif %}" data-bs-parent="#accordionSidebar">
                     <div class="m-0 py-1">
                         <ul class="fw-medium border-start border-secondary mx-2 ps-2"
                             style="border-left-width: 4px !important;">
                             <li class="my-2 list-unstyled">
-                                <a class="text-decoration-none text-secondary" href="">
-                                    Clientes
-                                </a>
-                            </li>
-                            <li class="my-2 list-unstyled">
-                                <a class="text-decoration-none text-secondary" href="">
-                                    Fornecedores
+                                <a class="text-decoration-none {% if 'customer-supplier' in request.path|urlencode %}fw-bold text-benefit{%else%}text-secondary{% endif %}" href="{% url 'customer_supplier_list' %}">
+                                    Clientes e Fornecedores
                                 </a>
                             </li>
                         </ul>
