refactor: div header on templates

--- a/customer_suppliers/templates/customer_supplier/form.html
+++ b/customer_suppliers/templates/customer_supplier/form.html
@@ -3,6 +3,17 @@
 
 {% block content %}
 
+<!-- HEADER -->
+<div class="m-3">
+    <h2 class="m-0 fw-bolder fs-3">
+        Clientes e Fornecedores
+    </h2>
+    <p class="m-0">
+        Formulário
+    </p>
+</div>
+<!-- FIM HEADER -->
+
 <div class="card-smart">
     <form method="post">
         {% csrf_token %}
