--- a/customer_suppliers/templates/customer_supplier/list.html
+++ b/customer_suppliers/templates/customer_supplier/list.html
@@ -4,6 +4,17 @@
 
 {% block content %}
 
+<!-- HEADER -->
+<div class="m-3">
+    <h2 class="m-0 fw-bolder fs-3">
+        Clientes e Fornecedores
+    </h2>
+    <p class="m-0">
+        Listagem
+    </p>
+</div>
+<!-- FIM HEADER -->
+
 <div class="card-smart">
 
     <div class="d-flex justify-content-end">
