--- a/customer_suppliers/templates/customer_supplier/confirm_delete.html
+++ b/customer_suppliers/templates/customer_supplier/confirm_delete.html
@@ -4,6 +4,17 @@
 
 {% block content %}
 
+<!-- HEADER -->
+<div class="m-3">
+    <h2 class="m-0 fw-bolder fs-3">
+        Clientes e Fornecedores
+    </h2>
+    <p class="m-0">
+        Excluir
+    </p>
+</div>
+<!-- FIM HEADER -->
+
 <div class="card-smart">
     <form method="post">{% csrf_token %}
         <p class="fs-5 fw-semibold m-0">
