--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -13,6 +13,43 @@
             <div class="accordion-item">
                 <div class="accordion-header">
                     <a class="accordion-button fw-light collapsed text-decoration-none" href=""
+                        data-bs-toggle="collapse" data-bs-target="#collapse-debits"
+                        aria-controls="collapse-debits">
+                        <span class="material-symbols-outlined me-2 fw-light">
+                            location_city
+                        </span>
+                        Controle de débitos
+                    </a>
+                </div>
+                <div id="collapse-debits" class="accordion-collapse collapse {% if 'customer-supplier' in request.path|urlencode %}show{% endif %}" data-bs-parent="#accordionSidebar">
+                    <div class="m-0 py-1">
+                        <ul class="fw-medium border-start border-secondary mx-2 ps-2"
+                            style="border-left-width: 4px !important;">
+                            <li class="my-2 list-unstyled">
+                                <a class="text-decoration-none {% if 'customer-supplier' in request.path|urlencode %}fw-bold text-benefit{%else%}text-secondary{% endif %}" href="{% url 'customer_supplier_list' %}">
+                                    Empreendimentos
+                                </a>
+                            </li>
+                            <li class="my-2 list-unstyled">
+                                <a class="text-decoration-none {% if 'customer-supplier' in request.path|urlencode %}fw-bold text-benefit{%else%}text-secondary{% endif %}" href="{% url 'customer_supplier_list' %}">
+                                    Atualização de dados
+                                </a>
+                            </li>
+                            <li class="my-2 list-unstyled">
+                                <a class="text-decoration-none {% if 'customer-supplier' in request.path|urlencode %}fw-bold text-benefit{%else%}text-secondary{% endif %}" href="{% url 'customer_supplier_list' %}">
+                                    Cobrança
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- FIM ACCORDION ITEM -->
+
+            <!-- ACCORDION ITEM -->
+            <div class="accordion-item">
+                <div class="accordion-header">
+                    <a class="accordion-button fw-light collapsed text-decoration-none" href=""
                         data-bs-toggle="collapse" data-bs-target="#collapse-customers"
                         aria-controls="collapse-customers">
                         <span class="material-symbols-outlined me-2 fw-light">
