fix: CheckingAccount success url

--- a/financials/templates/account_holder/list.html
+++ b/financials/templates/account_holder/list.html
@@ -109,7 +109,7 @@
                         </a>
                     </div>
                     <div class="m-2">
-                        <a href="{% url 'checking_account_update' checking_account.id %}" class="btn border icon-link justify-content-center w-100">
+                        <a href="{% url 'checking_account_update' account_holder.id checking_account.id %}" class="btn border icon-link justify-content-center w-100">
                             <span class="material-symbols-outlined me-1">
                                 edit
                             </span>
