feat(FinancialMovement): queryset order by with order and JS reload

--- a/financials/templates/financial_movement/list.html
+++ b/financials/templates/financial_movement/list.html
@@ -219,6 +219,7 @@
             }
 
             console.log("Ordem atualizado com sucesso!");
+            location.replace(location.href);
         } catch (error) {
             console.error(error.message);
         }
