feat (Enterprise): update

--- a/debits/templates/enterprise/list.html
+++ b/debits/templates/enterprise/list.html
@@ -67,7 +67,7 @@
                                     Ações
                                 </p>
                                 <li>
-                                    <a class="dropdown-item" href="">
+                                    <a class="dropdown-item" href="{% url 'enterprise_update' object.id %}">
                                         Editar
                                     </a>
                                 </li>
