feat(Enterprise): delete

--- a/debits/templates/enterprise/list.html
+++ b/debits/templates/enterprise/list.html
@@ -72,7 +72,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item text-danger" href="">
+                                    <a class="dropdown-item text-danger" href="{% url 'enterprise_delete' object.id %}">
                                         Excluir
                                     </a>
                                 </li>
