feat (Lot): update

--- a/debits/templates/lot/list.html
+++ b/debits/templates/lot/list.html
@@ -75,7 +75,7 @@
                                     Ações
                                 </p>
                                 <li>
-                                    <a class="dropdown-item" href="">
+                                    <a class="dropdown-item" href="{% url 'lot_update' enterprise.id object.id %}">
                                         Editar
                                     </a>
                                 </li>
