feat (Lot): delete

--- a/debits/templates/lot/list.html
+++ b/debits/templates/lot/list.html
@@ -80,7 +80,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item text-danger" href="">
+                                    <a class="dropdown-item text-danger" href="{% url 'lot_delete' enterprise.id object.id %}">
                                         Excluir
                                     </a>
                                 </li>
