--- a/debits/templates/lot/list.html
+++ b/debits/templates/lot/list.html
@@ -5,23 +5,26 @@
 {% block content %}
 
 <!-- HEADER -->
-<div class="m-3">
-    <h2 class="m-0 fw-bolder fs-3">
-        {{enterprise}}
-    </h2>
-    <p class="m-0">
-        Lotes listagem
-    </p>
+<div class="m-3 d-flex justify-content-between">
+    <div>
+        <h2 class="m-0 fw-bolder fs-3">
+            {{enterprise}}
+        </h2>
+        <p class="m-0">
+            Lotes listagem
+        </p>
+    </div>
+    <div>
+        <a href="{% url 'lot_create' enterprise.id %}" class="btn btn-smart" style="width: 150px;">
+            Novo
+        </a>
+    </div>
+
 </div>
 <!-- FIM HEADER -->
 
 <div class="card-smart">
 
-    <div class="d-flex justify-content-end">
-        <a href="{% url 'lot_create' enterprise.id %}" class="btn btn-smart w-50">
-            Novo
-        </a>
-    </div>
     <p class="mt-3 text-secondary">
         Total {{ page_obj|length }} de {{ page_obj.paginator.count }} registros.
     </p>
@@ -80,7 +83,8 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item text-danger" href="{% url 'lot_delete' enterprise.id object.id %}">
+                                    <a class="dropdown-item text-danger"
+                                        href="{% url 'lot_delete' enterprise.id object.id %}">
                                         Excluir
                                     </a>
                                 </li>
