--- a/debits/templates/lot/list.html
+++ b/debits/templates/lot/list.html
@@ -51,16 +51,21 @@
                         {{object.lot}}
                     </td>
                     <td>
-                        Teste
+                        {{object.sales_contracts.customer_supplier.name}}
+                        <p class="m-0 text-secondary fs-7">
+                            {{object.sales_contracts.contract_date|date:'d/m/Y'}}
+                        </p>
                     </td>
                     <td>
                         {{object.municipal_registration}}
                     </td>
                     <td>
-                        0
+                        <p>
+                            R$ 5.000,00
+                        </p>
                     </td>
-                    <td>
-                        67 99999
+                    <td class="fs-7">
+                        {{object.sales_contracts.customer_supplier.phone}}, {{object.sales_contracts.customer_supplier.phone}}
                     </td>
                     <td class="d-flex">
                         <a href="" class="btn-smart mx-1">
@@ -77,6 +82,12 @@
                                 <p class="fs-7 text-secondary mx-3 my-0">
                                     Ações
                                 </p>
+                                <li>
+                                    <a class="dropdown-item"
+                                        href="{% url 'sales_contract_create' enterprise.id object.id %}">
+                                        Novo contrato
+                                    </a>
+                                </li>
                                 <li>
                                     <a class="dropdown-item" href="{% url 'lot_update' enterprise.id object.id %}">
                                         Editar
