refactor: change field 'phone' to 'phone1'

--- a/debits/templates/lot/list.html
+++ b/debits/templates/lot/list.html
@@ -65,7 +65,7 @@
                         </p>
                     </td>
                     <td class="fs-7">
-                        {{object.sales_contracts.customer_supplier.phone}}, {{object.sales_contracts.customer_supplier.phone}}
+                        {{object.sales_contracts.customer_supplier.phone1}}, {{object.sales_contracts.customer_supplier.phone2}}
                     </td>
                     <td class="d-flex">
                         <a href="" class="btn-smart mx-1">
