fix(CustomerSupplier): create and update with user

--- a/customer_suppliers/templates/customer_supplier/form.html
+++ b/customer_suppliers/templates/customer_supplier/form.html
@@ -32,9 +32,13 @@
                 {{form.email.label}}
                 {{form.email}}
             </div>
-            <div class="col-md-4">
-                {{form.phone.label}}
-                {{form.phone}}
+            <div class="col-md-2">
+                {{form.phone1.label}}
+                {{form.phone1}}
+            </div>
+            <div class="col-md-2">
+                {{form.phone2.label}}
+                {{form.phone2}}
             </div>
 
             <div class="col-md-6">
