--- a/financials/templates/financial_movement/list.html
+++ b/financials/templates/financial_movement/list.html
@@ -140,8 +140,12 @@
             {% endif %}
         </ul>
 
+
+        <p class="m-0 fs-7">
+            Exportar:
+        </p>
         <a href="{% url 'financial_movements_list_pdf' %}?checking_account={{account_id}}&movement_date__gte={{start_date}}&movement_date__lte={{end_date}}"
-            class="btn btn-light m-0">
+            class="btn btn-light mb-3">
             PDF
         </a>
     </nav>
@@ -152,6 +156,7 @@
                 <tr>
                     <th scope="col">ID</th>
                     <th scope="col">Cliente / Fornecedor</th>
+                    <th scope="col">Descrição</th>
                     <th scope="col">Valor</th>
                     <th scope="col">Data</th>
                     <th scope="col">Saldo</th>
@@ -176,6 +181,9 @@
                         <p class="text-secondary m-0">
                             {{movement.financial_transaction_installment.financial_transaction.financial_category.name}}
                         </p>
+                    </td>
+                    <td>
+                        {{movement.financial_transaction_installment.financial_transaction.description}}
                     </td>
                     <td
                         class="{%if movement.financial_transaction_installment.financial_transaction.type == 0%}text-danger{%else%}text-success{%endif%} fw-bold">
