--- a/financials/templates/financial_movement/report.html
+++ b/financials/templates/financial_movement/report.html
@@ -5,102 +5,147 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movimentação Relatório</title>
+
+    <style>
+        /* Estilo básico para tabelas */
+        .table {
+            width: 100%;
+            margin-bottom: 1rem;
+            font-size: 10px;
+            color: #212529;
+        }
+
+        /* Estilo para cabeçalho de tabela */
+        .table th {
+            padding: 0.75rem;
+            font-size: 12px;
+            vertical-align: top;
+            font-weight: bold;
+            border-top: 1px solid #dee2e6;
+        }
+
+        /* Estilo para células de tabela */
+        .table td {
+            padding: 0.75rem;
+            vertical-align: top;
+            border-top: 1px solid #dee2e6;
+        }
+
+        /* Estilo para tabelas listradas (alternância de cores) */
+        .table-striped tbody tr:nth-of-type(odd) {
+            background-color: rgba(0, 0, 0, 0.05);
+        }
+
+        /* Estilo para tabelas com bordas */
+        .table-bordered {
+            border: 1px solid #dee2e6;
+        }
+
+        /* Estilo para tabelas responsivas em dispositivos móveis */
+        .table-responsive {
+            display: block;
+            width: 100%;
+            overflow-x: auto;
+            -webkit-overflow-scrolling: touch;
+        }
+
+        /* Estilo para tabelas pequenas */
+        .table-sm th,
+        .table-sm td {
+            padding: 0.3rem;
+        }
+    </style>
 </head>
 
-<body>
 
-    <div style="display: flex;">
-        <div class="ml-3">
-            <p class="m-0 fw-semibold">
-                Saldo anterior
-                <span class="fs-7 fw-light">
-                    ({{previous_balance.balance_date|date:"d/m/Y"|default:"Saldo inicial"}})
-                </span>
-            </p>
-            <p class="m-0">
-                R$ {{previous_balance.balance|default:balance.checking_account.initial_balance}}
-            </p>
-        </div>
-        <div class="ml-3">
-            <p class="m-0 fw-semibold">
-                Saldo atual <span class="fs-7 fw-light">({{balance.balance_date|date:"d/m/Y"}})</span>
-            </p>
-            <p class="m-0">
-                R$ {{balance.balance}}
-            </p>
-        </div>
-        <div class="ml-3">
-            <p class="m-0 fw-semibold">
-                Titular
-            </p>
-            <p class="m-0 text-truncate" style="width: 150px;">
-                {{balance.checking_account.account_holder.customer_supplier.name}}
-            </p>
-        </div>
-        <div class="ml-3">
-            <p class="m-0 fw-semibold">
-                Conta corrente
-            </p>
-            <p class="m-0">
-                {{balance.checking_account.name}}
-            </p>
-        </div>
-    </div>
+
+<body>
+    <p style="font-size: 8px; font-weight: 300;">
+        SmartIPTU v2 - GHC Tecnologia
+    </p>
+
+    <h1 style="margin: 0px !important;">
+        Movimentação Financeira
+    </h1>
+
+    <p style="margin: 5px 0px !important;">
+        Titular: {{balance.checking_account.account_holder.customer_supplier.name}}
+    </p>
+    <p style="margin: 5px 0px !important;">
+        Conta Corrente: {{balance.checking_account.name}}
+    </p>
+
+    <p style="margin: 0 !important;">
+        {{start_date}} - {{end_date}}
+    </p>
+
+    <p style="margin: 10px 0px 0px 0px !important; font-size: 12px;">
+        Saldo anterior
+        <span style="font-size: 8px; font-weight: 300;">
+            ({{previous_balance.balance_date|date:"d/m/Y"|default:"Saldo inicial"}})
+        </span>
+    </p>
+    <p style="margin: 5px 0 15px !important; font-weight: 800;">
+        R$ {{previous_balance.balance|default:balance.checking_account.initial_balance}}
+    </p>
 
     <!-- TABLE -->
-    <div class="table-responsive">
-        <table class="table table-hover table-bordered text-center align-middle">
-            <thead>
-                <tr>
-                    <th scope="col">ID</th>
-                    <th scope="col">Cliente / Fornecedor</th>
-                    <th scope="col">Valor</th>
-                    <th scope="col">Data</th>
-                    <th scope="col">Saldo</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- installment -->
+    <table class="table table-striped text-center">
+        <thead class="">
+            <tr>
+                <th scope="col">Data</th>
+                <th scope="col">Cliente / Fornecedor</th>
+                <th scope="col">Descrição</th>
+                <th scope="col">Valor (R$)</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- installment -->
 
-                {% for movement in financialmovement_list %}
-                <tr>
-                    <td class="text-secondary fs-7">
-                        <a
-                            href="{% url 'financial_transaction_list' %}?id={{movement.financial_transaction_installment.id}}">
-                            #{{movement.id}}
-                        </a>
-                    </td>
-                    <td>
-                        <p class="m-0 fw-semibold text-black">
-                            {{movement.financial_transaction_installment.financial_transaction.customer_supplier.name}}
-                        </p>
-                        <p class="text-secondary m-0">
-                            {{movement.financial_transaction_installment.financial_transaction.financial_category.name}}
-                        </p>
-                    </td>
-                    <td
-                        class="{%if movement.financial_transaction_installment.financial_transaction.type == 0%}text-danger{%else%}text-success{%endif%} fw-bold">
-                        {%if movement.financial_transaction_installment.financial_transaction.type == 0%}
-                        -
-                        {%else%}
-                        +
-                        {%endif%}
-                        R$ {{movement.amount}}
-                    </td>
-                    <td>
-                        {{movement.movement_date|date:'d/m/Y'}}
-                    </td>
-                    <td id="balance-{{forloop.counter}}" class="text-secondary"></td>
-                </tr>
+            {% for movement in financialmovement_list %}
+            <tr>
+                <td class="align-middle">
+                    {{movement.movement_date|date:'d/m/Y'}}
+                </td>
+                <td class="align-middle">
+                    <p style="font-weight: bold; margin: 0 !important;">
+                        {{movement.financial_transaction_installment.financial_transaction.customer_supplier.name}}
+                    </p>
+                    <p style="font-weight: 300; font-size: 8px; margin: 0 !important;">
+                        {{movement.financial_transaction_installment.financial_transaction.financial_category.name}}
+                    </p>
+                </td>
+                <td class="align-middle">
+                    {{movement.financial_transaction_installment.financial_transaction.description}}
+                </td>
+                <td
+                    class="{%if movement.financial_transaction_installment.financial_transaction.type == 0%}text-danger{%else%}text-success{%endif%} fw-bold">
+                    {%if movement.financial_transaction_installment.financial_transaction.type == 0%}
+                    -
+                    {%else%}
+                    +
+                    {%endif%}
+                    R$ {{movement.amount}}
+                </td>
+            </tr>
 
-                {%endfor%}
-                <!-- END installment -->
+            {%endfor%}
+            <!-- END installment -->
 
-            </tbody>
-        </table>
+        </tbody>
+    </table>
 
-    </div>
     <!-- END TABLE -->
+
+    <p style="margin: 10px 0px 0px 0px !important; font-size: 12px;">
+        Saldo atual
+        <span style="font-size: 8px; font-weight: 300;">
+            ({{balance.balance_date|date:"d/m/Y"}})
+        </span>
+    </p>
+    <p style="margin: 5px 0 15px !important; font-weight: 800;">
+        R$ {{balance.balance}}
+    </p>
 
 </body>
 
