--- a/financials/templates/financial_movement/report.html
+++ b/financials/templates/financial_movement/report.html
@@ -116,7 +116,7 @@
                     </p>
                 </td>
                 <td class="align-middle">
-                    {{movement.financial_transaction_installment.financial_transaction.description}}
+                    {{movement.description}}
                 </td>
                 <td
                     class="{%if movement.financial_transaction_installment.financial_transaction.type == 0%}text-danger{%else%}text-success{%endif%} fw-bold">
