--- a/financials/templates/financial_movement/ofx_review.html
+++ b/financials/templates/financial_movement/ofx_review.html
@@ -25,6 +25,7 @@
                     <th>Categoria</th>
                     <th>Descrição</th>
                     <th>Valor</th>
+                    <th>Vincular conta</th>
                     <th>Excluir linha</th>
                 </tr>
                 {% for form in formset %}
@@ -32,9 +33,10 @@
                     <td class="col-1">{{ form.type }}</td>
                     <td class="col-2">{{ form.movement_date }}</td>
                     <td class="col-2">{{ form.customer_supplier }}</td>
-                    <td class="col-2">{{ form.category }}</td>
+                    <td class="col-1">{{ form.category }}</td>
                     <td class="col-2">{{ form.description }}</td>
                     <td class="col-1">{{ form.amount }}</td>
+                    <td class="col-2">{{ form.transaction_installment }}</td>
                     <td class="col-1">{{ form.DELETE }}</td>
                 </tr>
                 {% endfor %}
