feat(Lot): list upload debits

--- a/debits/templates/enterprise/list.html
+++ b/debits/templates/enterprise/list.html
@@ -17,8 +17,8 @@
 
 <div class="card-smart">
 
-    <div class="d-flex justify-content-end">
-        <a href="{% url 'enterprise_create' %}" class="btn btn-smart w-50">
+    <div class="">
+        <a href="{% url 'enterprise_create' %}" class="btn-smart">
             Novo
         </a>
     </div>
