--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -27,15 +27,15 @@
                         <ul class="fw-medium border-start border-secondary mx-2 ps-2"
                             style="border-left-width: 4px !important;">
                             <li class="my-2 list-unstyled">
-                                <a class="text-decoration-none {% if 'debits' in request.path|urlencode %}fw-bold text-benefit{%else%}text-secondary{% endif %}"
+                                <a class="text-decoration-none {% if 'enterprise/' in request.path|urlencode %}fw-bold text-benefit{%else%}text-secondary{% endif %}"
                                     href="{% url 'enterprise_list' %}">
                                     Empreendimentos
                                 </a>
                             </li>
                             <li class="my-2 list-unstyled">
-                                <a class="text-decoration-none {% if 'customer-supplier' in request.path|urlencode %}fw-bold text-benefit{%else%}text-secondary{% endif %}"
-                                    href="{% url 'customer_supplier_list' %}">
-                                    Atualização de dados
+                                <a class="text-decoration-none {% if 'debits/update' in request.path|urlencode %}fw-bold text-benefit{%else%}text-secondary{% endif %}"
+                                    href="{% url 'lot_debits_list' %}">
+                                    Atualização de débitos IPTU
                                 </a>
                             </li>
                             <li class="my-2 list-unstyled">
