feat(Lot): upload statement file and  create financial transactions

--- a/debits/templates/lot/debits.html
+++ b/debits/templates/lot/debits.html
@@ -18,7 +18,7 @@
 <div class="card-smart">
 
     <div class="mb-3">
-        <a href="" class="btn-smart">
+        <a href="{% url 'lot_debits_create' %}" class="btn-smart">
             Upload
         </a>
     </div>
