feat: list and create Debits IPTU Installments of Lot

--- a/debits/templates/lot/list.html
+++ b/debits/templates/lot/list.html
@@ -68,7 +68,7 @@
                         {{object.sales_contracts.customer_supplier.phone1}}, {{object.sales_contracts.customer_supplier.phone2}}
                     </td>
                     <td class="d-flex">
-                        <a href="" class="btn-smart mx-1">
+                        <a href="{% url 'lot_installment_list' object.id %}" class="btn-smart mx-1">
                             Parcelas
                         </a>
                         <div class="dropstart mx-1">
