feat(CustomerSupplier): types

--- a/customer_suppliers/templates/customer_supplier/form.html
+++ b/customer_suppliers/templates/customer_supplier/form.html
@@ -19,9 +19,9 @@
         {% csrf_token %}
         <div class="row g-3">
 
-            <div class="col-md-12">
-                {{form.type.label}}
-                {{form.type}}
+            <div class="col-md-12 border rounded p-3">
+                {{form.type_customer_supplier.label}}
+                {{form.type_customer_supplier}}
             </div>
 
             <div class="col-md-4">
