--- a/debits/templates/lot/list.html
+++ b/debits/templates/lot/list.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <!-- HEADER -->
-<div class="m-3 d-flex justify-content-between">
+<div class="card-smart d-flex justify-content-between sticky-top">
     <div>
         <h2 class="m-0 fw-bolder fs-3">
             {{enterprise}}
@@ -25,9 +25,6 @@
 
 <div class="card-smart">
 
-    <p class="mt-3 text-secondary">
-        Total {{ page_obj|length }} de {{ page_obj.paginator.count }} registros.
-    </p>
     <div class="table-responsive">
         <table class="table align-middle mb-3 text-center">
             <thead>
@@ -107,40 +104,7 @@
             </tbody>
         </table>
 
-        <div class="d-flex justify-content-between aling-items-center">
-            <p class="m-0 text-secondary">
-                Página {{ page_obj.number }} de {{ page_obj.paginator.num_pages }}.
-            </p>
-            <nav aria-label="" class="m-0 p-0">
-                <ul class="pagination">
-                    {% if page_obj.has_previous %}
-                    <li class="page-item">
-                        <a class="page-link" href="{% querystring page=1 %}">&laquo; Início</a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="{% querystring page=page_obj.previous_page_number %}">
-                            Anterior
-                        </a>
-                    </li>
-                    {% endif %}
-
-                    {% if page_obj.has_next %}
-                    <li class="page-item">
-                        <a class="page-link" href="{% querystring page=page_obj.next_page_number %}">
-                            Próxima
-                        </a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="{% querystring page=page_obj.paginator.num_pages %}">
-                            Fim &raquo;
-                        </a>
-                    </li>
-                    {% endif %}
-
-                </ul>
-            </nav>
-        </div>
-
+    
     </div>
 
 </div>
